2007-10-13  Stephane Charette <stephanecharette@gmail.com>
	* src/plugins/rel_pt.py: new file (Portuguese), contributed by Duarte
	Loreto <happyguy_pt@hotmail.com>
	* src/plugins/Makefile.am: added rel_pt.py
	* po/POTFILES: added rel_pt.py
	* po/POTFILES.in: added rel_pt.py

2007-10-12  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/holidays.xml: Fixed Victoria Day (via James A. Treacy)
	* src/plugins/holidays.xml: Added Swedish official holidays (via Peter Landgren)

2007-10-12  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/unused.glade: Do not translate gtk stock label id.

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gramps_main.py: don't create filters dir, not needed

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Filters/_FilterParser.py: avoid unknown filters crashing
	* src/Filters/Rules/Person/__init__.py: remove private filter list and register, not used.

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: allow check without gid creation on all objects
	* src/GrampsDb/_ReadXML.py: on reference read, don't create gid.
	This also patches a privacy setting error on placeobj in place tag section

2007-10-11  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/unused.glade: Do not translate gtk stock label id.

2007-10-11 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/DateHandler/__init__.py: use portuguese date handler

2007-10-10 Duarte Loreto <happyguy_pt@hotmail.com>
	* src/DateHandler/_Date_pt.py: portugese datehandler accompanying translation
	* po/POTFILES.in: new file in POTFILE
	* src/DateHandler/Makefile.am: add new file for distribution

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsDbBase.py: allow not to create gramps_id on add
	* src/GrampsDb/_ReadXML.py: on sourceref, don't create gramps_id